--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -2,7 +2,7 @@
 .navbar {
   width: 100%;
   background-color: #1a1a1a;
-  border: 4px solid #654e47;
+  border: 4px solid #8B7355;
   position: sticky;
   top: 0;
   z-index: 1000;
