--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -2,7 +2,7 @@
 .hero {
   width: 100%;
   height: 70vh;
-  background-image: url('/images/tattoo_studio_bkg.jpg');
+  background-image: url('/images/lynn_background_photo.jpeg');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
